# personality-memory

./: README.md  SKILL.md  pyproject.toml  skill.yaml
.tmp-eval-debug/: conflict-review-replay-report.json  conflict-review-replay-report.md  multi-profile-replay-report.json  multi-profile-replay-report.md
agents/: openai.yaml
data/: long_term_memory.json  memory_candidates.json  persona_profile.json  registry.json  revisions.json
examples/: dialogue_01.json  dialogue_02.json  dialogue_03_conflict.json  dialogue_04_aging_start.json  dialogue_05_aging_checkpoint.json  dialogue_06_aging_revive.json  eval_aging.json  eval_conflict.json  eval_migration.json  eval_multi_profile.json  eval_stable.json  runtime_transcript.jsonl
examples/legacy_seed_v1/: long_term_memory.json
exports/: personality-memory-export.json  personality-memory-export.md
exports/evals/: aging-revive-replay-report.json  aging-revive-replay-report.md  migration-seeded-replay-report.json  migration-seeded-replay-report.md  multi-profile-replay-report.json  multi-profile-replay-report.md  stable-memory-replay-report.json  stable-memory-replay-report.md
scripts/: demo.py
src/personality_memory/: __init__.py  backends.py  candidate_lifecycle.py  cli.py  consolidator.py  evaluator.py  extractor.py  governance.py  lifecycle.py  memory_ops.py  models.py  (+8 more)
tests/: test_backends.py  test_cli.py  test_consolidator.py  test_evaluator.py  test_extractor.py  test_governance.py  test_lifecycle.py  test_models.py  test_persona_builder.py  test_retrieval.py  test_runtime.py  test_storage.py  test_utils.py
(+57 files in other folders)
